--- a/home.html
+++ b/home.html
@@ -3,9 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Arpit Verma — Web Developer</title>
   <meta name="description" content="Advanced personal portfolio of a web developer. Projects, skills, contact form, resume download, and social links." />
   <meta name="theme-color" content="#0ea5e9" />
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Arpit Verma | Web Developer Portfolio</title>
+
+  <meta name="description" content="Portfolio website of Arpit Verma, B.Tech CSE student and Web Developer. Showcasing projects, skills, and contact details for collaborations.">
+  <meta name="keywords" content="Arpit Verma, Portfolio, Web Developer, B.Tech CSE, Frontend Developer, HTML, CSS, JavaScript, Projects, Contact">
+  <meta name="author" content="Arpit Verma">
+
+  <meta property="og:title" content="Arpit Verma | Web Developer Portfolio">
+  <meta property="og:description" content="Explore my projects, skills, and experience as a B.Tech Computer Science student passionate about Web Development.">
+  <meta property="og:image" content="https://arpitverma695.github.io/assets/preview.png"> 
+  <meta property="og:url" content="https://arpitverma695.github.io/">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Arpit Verma | Web Developer Portfolio">
+  <meta name="twitter:description" content="Portfolio website of Arpit Verma, B.Tech CSE student and Web Developer.">
+  <meta name="twitter:image" content="https://arpitverma695.github.io/assets/preview.png">
+
+  <link rel="icon" type="image/png" href="assets/favicon.png"> 
+</head>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -258,3 +281,4 @@ Currently pursuing B.Tech in Computer Science, I’m constantly learning and imp
   </script>
 </body>
 </html>
+
